# pedestrian_tracker

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bus_track_ncs.cpp  clean.sh  config.csv  config_2.csv  detection.cpp  detection.hpp  launch.json  setup_ram_disk.sh
configs/: camera_config.txt  roi_config.txt
data/: database.db  metrics.db
deployment/: AI_Install.sh  ELK_install.sh  dashboard.ndjson  dashboards.ndjson  readme.md
deployment/AI Files/: filebeat.yml
deployment/Analytics Files/: dashboard.ndjson  export.ndjson  logstash_AI.conf
directionLog/: CMakeLists.txt  main.cpp  test.csv
directionLog/include/: logObject.h
directionLog/include/src/: logObject.cpp
docs/: camera-config.md  roi-config.md
extras/: CMakeLists.txt
extras/catch2/: CMakeLists.txt
extras/spdlog/: CMakeLists.txt
heatmap_gen/cpp/: CMakeLists.txt  README.md  alphablending.py  heatmap_gen.cpp
heatmap_gen/cpp/include/: Blues.c
heatmap_gen/cpp/src/: BrBG.c  BuGn.c  BuPu.c  GnBu.c  Greens.c  Greys.c  OrRd.c  Oranges.c  PRGn.c  PiYG.c  PuBu.c  PuBuGn.c  PuOr.c  PuRd.c  Purples.c  RdBu.c  RdGy.c  RdPu.c  RdYlBu.c  Reds.c  YlGn.c  YlGnBu.c  YlOrBr.c  YlOrRd.c  gray.c
intel64/Release/: heatmap_gen  pedestrian_tracker
models/: person-detection-retail-0013.xml  person-reidentification-retail-0288.xml
models/mobilenet/: MobileNetSSD_deploy.bin.REMOVED.git-id  MobileNetSSD_deploy.mapping  MobileNetSSD_deploy.xml  mobilenet_graph.REMOVED.git-id
pedestrian_tracker/cpp/: CMakeLists.txt  README.md  main.cpp
pedestrian_tracker/cpp/include/: config_log_paths.hpp  config_paths.hpp  core.hpp  distance_estimate.hpp  logObject.h  logObject.hpp  pedestrian_tracker.hpp  tracker.hpp  utils.hpp
pedestrian_tracker/cpp/src/: distance_estimate.cpp  utils.cpp  (+2 more)
pedestrian_tracker_demo/cpp/: main.cpp
src/: CMakeLists.txt  Makefile  bus_count.cpp  buscount  buscount.cpp  buscountcli.cpp  buscountd.cpp  detection.cpp  detection.hpp  detector.cpp  detector.hpp  detector_opencv.cpp  detector_opencv.hpp  detector_openvino.cpp  detector_openvino.hpp  event.cpp  event.hpp  feature_affinity.cpp  feature_affinity.hpp  gstbuscountfilter.cpp  gstbuscountfilter.hpp  libbuscount.cpp  libbuscount.hpp  position_affinity.cpp  position_affinity.hpp  rtsp_flexi_media_factory.c  rtsp_flexi_media_factory.h  sanity.cpp  tick_counter.hpp  tracker.cpp  tracker.hpp  tracker_component.cpp  tracker_component.hpp  tracker_reidentify.cpp  tracker_reidentify.hpp  utils.cpp  utils.hpp  video_sync.cpp  video_sync.hpp  world.cpp  (+1 more)
src/buscount/: CMakeLists.txt  buscountcli.cpp  buscountd.cpp  config.json  cv_utils.cpp  cv_utils.hpp  gstbuscountfilter.cpp  gstbuscountfilter.hpp  image_stream.cpp  image_stream.hpp  libbuscount.cpp  libbuscount.hpp  rtsp_flexi_media_factory.c  rtsp_flexi_media_factory.h  rtsp_server.cpp  rtsp_server.hpp  tick_counter.hpp  video_sync.hpp
src/buscount/detection/: detection.cpp  detection.hpp  detector.cpp  detector.hpp  detector_opencv.cpp  detector_opencv.hpp  detector_openvino.cpp  detector_openvino.hpp
src/buscount/metrics/: CMakeLists.txt  cached_detector.cpp  cached_detector.hpp  cached_features.cpp  cached_features.hpp  compare_gt.cpp  compare_gt.hpp  metrics_mot_process.cpp  metrics_postprocess.cpp  metrics_preprocess.cpp  mot_detections.cpp  mot_detections.hpp  read_simulator.hpp  timed_wrapper.cpp  timed_wrapper.hpp
src/buscount/tracking/: feature_affinity.cpp  feature_affinity.hpp  original_tracker.cpp  original_tracker.hpp  position_affinity.cpp  position_affinity.hpp  tracker.hpp  tracker_component.cpp  tracker_component.hpp
src/common/: CMakeLists.txt  config.cpp  config.hpp  data_fetch.cpp  data_fetch.hpp  event.cpp  event.hpp  file_utils.cpp  file_utils.hpp  geom.cpp  geom.hpp  optional.hpp  sql_helper.cpp  sql_helper.hpp  string_utils.hpp  time_utils.cpp  time_utils.hpp
src/junk/: delme.cpp  detection_old.cpp  detection_old.hpp  test_tbb  test_tbb.cpp
src/other/: buscountd.cpp
src/server/: CMakeLists.txt  buscountcloud.cpp  buscountserver.cpp  cloud_updater.cpp  cloud_updater.hpp  device_register.cpp  device_register.hpp  index.html  json_convert.cpp  json_convert.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp
systemd/: CMakeLists.txt  buscount-ramdisk.mount.in  buscountd.service.in  buscountwebstart.in  buswebserver.service.in  ncs_reset
test/: config_tests.cpp  distance_est_tests.cpp  extra_log_tests.cpp
tests/: CMakeLists.txt  test_affinity_features.cpp  test_detection.cpp  test_detector_opencv.cpp  test_detector_openvino.cpp  test_libbuscount.cpp  test_tick_counter.cpp  test_tracker_comp.cpp  test_utils.cpp  test_video_sync.cpp  test_world.cpp  testing_utils.cpp  testing_utils.hpp  tick_counter.cpp
tests/buscount/: CMakeLists.txt  test_affinity_features.cpp  test_cv_utils.cpp  test_detection.cpp  test_detector_opencv.cpp  test_detector_openvino.cpp  test_libbuscount.cpp  test_tick_counter.cpp  test_tracker_comp.cpp  test_video_sync.cpp  test_world.cpp  testing_utils.cpp  testing_utils.hpp
tests/common/: CMakeLists.txt  test_file_utils.cpp  test_geom.cpp  test_time_utils.cpp
tests/metrics/: test_detection_cache.cpp  test_feature_cache.cpp  test_gt_compare.cpp  test_read_simulator.cpp
tests/server/: CMakeLists.txt  dummy.cpp
video/pi1_20181214/: 2018-12-14--14-41-23.mp4.REMOVED.git-id  2018-12-14--14-41-23.mp4.csv
video/pi3_20181213/: 2018-12-13--08-26-02--snippit-1.mp4.REMOVED.git-id  2018-12-13--08-26-02--snippit-2.mp4.REMOVED.git-id  2018-12-13--08-26-02--snippit-3.mp4.REMOVED.git-id  2018-12-13--08-26-02--snippit-4.mp4.REMOVED.git-id  2018-12-13--08-26-02--snippit-5.mp4.REMOVED.git-id  2018-12-13--08-26-02--snippit-6.mp4.REMOVED.git-id  2018-12-13--08-36-02--snippit-10.mp4.REMOVED.git-id  2018-12-13--08-36-02--snippit-7.mp4.REMOVED.git-id  2018-12-13--08-36-02--snippit-8.mp4.REMOVED.git-id  2018-12-13--08-36-02--snippit-9.mp4.REMOVED.git-id  2018-12-13--08-46-03--snippit-11.mp4.REMOVED.git-id  2018-12-13--08-46-03--snippit-12.mp4.REMOVED.git-id  2018-12-13--08-46-03--snippit-13.mp4.REMOVED.git-id
wrapper/: fp16.c
(+4 files in other folders)
